kubernetes/ingress-opentelemetry-collector.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otl-collector-ingress
  namespace: otel-demo
spec:
  rules:
  - host: otelcollector.lixdevops.navify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-otelcol
            port:
              number: 4318
  ingressClassName: nginx
